--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "i18next": "^23.12.7",
     "lodash": "^4.17.21",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.0.1",
     "react-native": "0.74.5",
     "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "~2.16.1",
@@ -49,8 +51,10 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.2",
+    "@storybook/addon-designs": "^8.0.3",
     "@storybook/addon-ondevice-actions": "^7.6.20",
     "@storybook/addon-ondevice-controls": "^7.6.20",
+    "@storybook/addon-storysource": "^8.2.9",
     "@storybook/react-native": "^7.6.20",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
