--- a/app.json
+++ b/app.json
@@ -29,7 +29,15 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "assets/fonts/Montserrat/Montserrat-VariableFont_wght.ttf"
+          ]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
