--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@storybook/react": "^8.2.8",
     "expo": "~51.0.26",
+    "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -44,7 +46,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.31.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
