--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@storybook/react": "^8.2.8",
+    "axios": "^1.7.7",
     "expo": "~51.0.26",
     "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
